<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/MyTheme.ActionBar.TitleTextStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/main_activity_title"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textSub1"
                style="@style/subtitleStyle"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/activity_subtitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/theoryCard"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="expand"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/cardTitleStyle"
                                android:text="@string/period_title" />

                            <EditText
                                android:id="@+id/editPeriod"
                                style="@style/cardEditStyle" />
                        </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/expecting_values"
    />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/details1"
                        style="@style/detailsTextStyle"
                        android:text="@string/period_details"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageView style="@style/cardArrowImageStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="expand"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/cardTitleStyle"
                                android:text="@string/width_title"
                                android:textSize="20sp" />

                            <EditText
                                android:id="@+id/editWidth"
                                style="@style/cardEditStyle" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Допустимі значення: 6, 4, 2"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/details2"
                        style="@style/detailsTextStyle"
                        android:text="@string/width_details"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageView style="@style/cardArrowImageStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:onClick="expand"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/cardTitleStyle"
                            android:text="@string/amplitude_title" />

                        <EditText
                            android:id="@+id/editAmplitude"
                            style="@style/cardEditStyle"
                            android:enabled="false"
                            android:text="1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/details3"
                        style="@style/detailsTextStyle"
                        android:text="@string/amplitude_details"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageView style="@style/cardArrowImageStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/theoryCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textSub1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:onClick="expand"
                app:cardBackgroundColor="@color/bgColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/short_theory"
                        android:textSize="20dp" />

                    <TextView
                        style="@style/detailsTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expandable_text"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    style="@style/cardArrowImageStyle"
                    android:layout_margin="0dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textSub2"
                style="@style/subtitleStyle"
                android:layout_below="@id/card3"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/activity_subtitle1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/wCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textSub2"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:onClick="expand"
                app:cardBackgroundColor="@color/bgColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/short_theory"
                        android:textSize="20sp" />

                    <TextView
                        style="@style/detailsTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expandable_text1"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    style="@style/cardArrowImageStyle"
                    android:layout_margin="0dp" />

            </androidx.cardview.widget.CardView>


            <ru.noties.jlatexmath.JLatexMathView
                android:id="@+id/latexView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wCard"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="80dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="startNewActivity"
                android:text="@string/button_main" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>